--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,16 @@ dependencies:
     sdk: flutter
   table_calendar: ^3.0.8
   flutter_speed_dial: ^7.0.0
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  feather_icons: ^1.2.0
+  google_fonts: ^5.1.0
+  flutter_svg: ^2.0.7
+  smooth_page_indicator: ^0.3.0-nullsafety.0
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
