--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,10 @@ dependencies:
   flutter_svg: ^2.0.7
   smooth_page_indicator: ^0.3.0-nullsafety.0
   carousel_slider: ^5.0.0
+  firebase_core: ^3.8.1
+  firebase_auth: ^5.3.4
 
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
