--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   intl: ^0.18.0
   table_calendar: ^3.0.8
   flutter_speed_dial: ^7.0.0
+  provider: ^6.1.2
   
 
   # The following adds the Cupertino Icons font to your application.
