--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "cmake.sourceDirectory": "C:/Users/User/Desktop/Flutter/plan_izi_v2/linux"
+    "cmake.sourceDirectory": "C:/Users/User/Desktop/Flutter/plan_izi_v2/linux",
+    "cmake.ignoreCMakeListsMissing": true
 }
