--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   table_calendar: ^3.0.8
   flutter_speed_dial: ^7.0.0
   provider: ^6.1.2
+  cloud_firestore: ^5.5.1
+  
   
 
   # The following adds the Cupertino Icons font to your application.
