--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   firebase_auth: ^5.3.4
   get: ^4.6.6
   url_launcher: ^6.3.1
+  share_plus: ^10.1.3
   
 dev_dependencies:
   flutter_test:
