--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   get: ^4.6.6
   url_launcher: ^6.3.1
   share_plus: ^10.1.3
+  firebase_messaging: ^15.1.6
   
 dev_dependencies:
   flutter_test:
